# dynamite-sampler-firmware

./: .clang-format  .gitignore  CMakeLists.txt  README.md  check_env.py  esp_idf_project_configuration.json  flash_calibration.py  generate_idf_flags_from_config_json.py  ota_update.py  partitions.csv  sampler_partitions.csv  sdkconfig.common  sdkconfig.debug  sdkconfig.debug-mockadc  sdkconfig.defaults  sdkconfig.release
.github/: release.yml
.github/workflow/: clang-format.yml
.github/workflows/: build-firmware.yml  clang-format.yml  enforce-semver-labels.yml
main/: ADS131M0x.cpp  ADS131M0x.h  ADS131M0x_cfg.h  ADS131M0x_reg.h  CMakeLists.txt  Kconfig.projbuild  adc_ble_interface.h  adc_proc.cpp  adc_proc.h  ble_ota.cpp  ble_ota_interface.h  ble_proc.cpp  ble_proc.h  board_cfg.h  debug_pin.h  dynamite_sampler_api.h  dynamite_uuid.h  generate_build_metadata.py  i2c_proc.cpp  i2c_proc.h  idf_component.yml  loadcell_calibration.cpp  loadcell_calibration.h  main.cpp  runtime_stats.cpp  runtime_stats.h  user_kvs.cpp  user_kvs.h
